modif fix navitem size and align

--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -39,9 +39,8 @@
   background-color: transparent !important;
 }
 
-
 .nav-item > a {
-  font-size: 1.5vw !important;
+  font-size: 2.5vh !important;
   vertical-align: top !important;
 }
 
